# em-keyboard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  README.rst  em.py  pyproject.toml  setup.cfg  setup.py  t.py  tests.py  tox.ini
.github/workflows/: deploy.yml  test.yml
em/: __init__.py  emoji-en-US.json  emojis.json
scripts/: despacify.py  run_command.py  update-emojilib.sh
src/em/: __init__.py  cli.py  emojis.json
src/em_keyboard/: __init__.py  __main__.py  cli.py  emoji-en-US.json  emojis.json
tests/: test_em.py
