[metadata]
name = em-keyboard
description = The CLI Emoji Keyboard
long_description = file: README.md
long_description_content_type = text/markdown
author = Kenneth Reitz
author_email = me@kennethreitz.org
maintainer = Hugo van Kemenade
url = https://github.com/hugovk/em-keyboard
license = ISC
keywords =
    CLI
    emoji
    keyboard
    search
project_urls =
    Source=https://github.com/hugovk/em-keyboard
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = em
include_package_data = True
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    pyperclip; platform_system == 'Darwin'
    pyperclip; platform_system == 'Windows'
python_requires = >=3.6

[options.entry_points]
console_scripts =
    em=em:cli

[options.extras_require]
tests =
    pytest
    pytest-cov

[options.package_data]
 =
    LICENSE
    NOTICE
em =
    emojis.json

[flake8]
max_line_length = 88

[tool:pytest]
addopts = --color=yes
